--- a/templates/_layouts/article.liquid
+++ b/templates/_layouts/article.liquid
@@ -4,7 +4,7 @@ layout: base
 
 <article>
   <header class="page-header">
-    <div class="container">
+    <div class="">
       <h4 class="title-one">
         Article
       </h4>
@@ -52,7 +52,7 @@ layout: base
   </header>
   
   <section class="wrapper">
-    <div class="container prose">
+    <div class=" prose">
       {{ content }}
     </div>
   </section>
