--- a/templates/_layouts/base.liquid
+++ b/templates/_layouts/base.liquid
@@ -21,8 +21,8 @@ footer_nav:
 
 ---
 
-<header class="header container">
-  <div class="header-contents">
+<header class="header ">
+  <div class="header-contents clearfix">
     <a title="Hamon - Home" class="header-logo" href="{{ site.baseurl | append: '/' }}">
       <h1 class="ir">
         Hamon
@@ -51,7 +51,7 @@ footer_nav:
 {{ content }}
 
 
-<footer class="clearboth container hidden">
+<footer class="clearboth  hidden">
   <a class="footer-logo silent-hover" href="{{ site.baseurl | append: '/' }}">
     <h1 class="ir">
       Hamon
