--- a/templates/_layouts/html.liquid
+++ b/templates/_layouts/html.liquid
@@ -24,7 +24,7 @@
   -->
 </head>
 <body class="{{ layout.body_class|default:'' }}">
-  <div id="page" class="{{ layout.page_class|default:'' }} clearfix">
+  <div id="page" class="{{ layout.page_class|default:'container' }} clearfix">
     
     {{ content }}
     
