--- a/templates/about.liquid
+++ b/templates/about.liquid
@@ -92,7 +92,7 @@ team:
 
 
 <section class="wrapper">
-  <div class="container">
+  <div class="">
     <ul>
       {% for section in page.about %}
         <li id="{{ section.title | slugify }}" class="teaser-spacer">
