--- a/templates/articles.liquid
+++ b/templates/articles.liquid
@@ -13,7 +13,7 @@ brief: |
 
 
 <section class="wrapper">
-  <div class="container">
+  <div class="">
     {% include articles_listing.liquid articles=site.articles %}
   </div>
 </section>
