--- a/templates/contact.liquid
+++ b/templates/contact.liquid
@@ -31,7 +31,7 @@ contact:
 
 
 <section class="wrapper">
-  <div class="container prose">
+  <div class=" prose">
     {% if page.body %}
       <div class="prose">
         {{ page.body | markdownify }}
