--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -21,7 +21,7 @@ logo:
 
 <div>
   <section class="wrapper wrapper-zigzag">
-    <div class="container prose">
+    <div class=" prose">
       {% if page.logo %}
         <figure class="contain-width centered">
           <a class="silent-hover" href="{{ page.logo.link }}">
@@ -35,7 +35,7 @@ logo:
   </section>
   
   <section class="wrapper wrapper-zigzag">
-    <div class="container">
+    <div class="">
       <h3 class="size-xlarge title-four">
         Clients &amp; Projects
       </h3>
@@ -80,7 +80,7 @@ logo:
   </section>
   
   <section class="wrapper wrapper-zigzag">
-    <div class="container">
+    <div class="">
       <div class="testimonial size-large">
         <blockquote>
           {{ client_testimonial.body | markdownify }}
@@ -100,7 +100,7 @@ logo:
   </section>
   
   <section class="wrapper wrapper-zigzag">
-    <div class="container">
+    <div class="">
       <h3 class="size-xlarge title-four">
         Articles &amp; Guides
       </h3>
@@ -109,7 +109,7 @@ logo:
   </section>
   
   <section class="wrapper wrapper-zigzag">
-    <div class="container">
+    <div class="">
       <h3 class="size-xlarge title-four">
         Team
       </h3>
@@ -139,7 +139,7 @@ logo:
   </section>
   
   <section class="wrapper wrapper-zigzag">
-    <div class="container">
+    <div class="">
       {% if contact_page.body %}
         <div class="prose">
           {{ contact_page.body | markdownify }}
