--- a/templates/lycaeum.liquid
+++ b/templates/lycaeum.liquid
@@ -32,7 +32,7 @@ topic: /topics/technology
 
 
 <section class="wrapper">
-  <div class="container prose">
+  <div class=" prose">
     {% if page.logo %}
       <figure class="contain-width centered">
         <a class="silent-hover" href="{{ page.logo.link }}">
