--- a/templates/work.liquid
+++ b/templates/work.liquid
@@ -55,7 +55,7 @@ clients:
 <ul>
   {% for client in page.clients %}
     <li class="wrapper">
-      <article class="container">
+      <article class="">
         <h1 class="title-four  size-regular">
           {% if client.link %}
             <a class="silent" href="{{ client.link }}">
