--- a/templates/_layouts/page.liquid
+++ b/templates/_layouts/page.liquid
@@ -5,7 +5,7 @@ layout: base
 
 <article>
   <header class="page-header">
-    <div class="container">
+    <div class="">
       <h2 class="title-one">
         {{ page.title }}
       </h2>
