--- a/templates/_layouts/topic.liquid
+++ b/templates/_layouts/topic.liquid
@@ -5,7 +5,7 @@ layout: base
 ---
 
 <header class="page-header">
-  <div class="container">
+  <div class="">
     <h2 class="title-one">
       {{ page.title }}
     </h2>
@@ -26,7 +26,7 @@ layout: base
 %}
 
 <div class="wrapper">
-  <p class="container">
+  <p class="">
     <a class="title-type size-small" href="{{ site.baseurl | append: '/topics' }}">
       &lt; All Topics
     </a>
