--- a/templates/topics.liquid
+++ b/templates/topics.liquid
@@ -11,7 +11,7 @@ brief: |
 ---
 
 <div class="wrapper">
-  <div class="container">
+  <div class="">
     {% for topic in site.topics %}
       {%
         include articles_listing_by_topic.liquid
