Use Hamon wordmark instead of monogram + improve header spacing

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -62,10 +62,10 @@ hr    { clear: both; }
 
 
 .container-values() {
-    @vpads:         1.5rem, 2rem, 2rem;
-    @hpads:         1.5rem, 3rem, 3rem;
-    @max-widths:    30rem, @md-min, @xl-min;
-    @breakpoints:   '',    @sm-min, @md-min;
+    @vpads:         1.5rem, 2rem,   2rem,   2rem;
+    @hpads:         1.0rem, 8%,     3rem,   3rem;
+    @max-widths:    30rem,  35rem,  @md-min,@xl-min;
+    @breakpoints:   '',     @xs-min,@sm-min,@md-min;
 }
 .container {
     margin: 0 auto;
