Improve content on the home page & URL/link styling

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -56,8 +56,8 @@ hr    { clear: both; }
 
 .indent-one { padding-left: 2rem; }
 .indent-two { padding-left: 4rem; }
-.embed-spacer   { margin-bottom: 2rem; }
-.teaser-spacer  { margin-bottom: 4rem; }
+.embed-spacer   { margin-bottom: 2rem; .md-plus({ margin-bottom: 3rem; }); }
+.teaser-spacer  { margin-bottom: 4rem; .md-plus({ margin-bottom: 6rem; }); }
 
 
 
