--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -179,7 +179,7 @@ p {
     &:extend(.size-small);
     color: @brand-three;
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: normal;
 }
 .prose {
     // h1,
