--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -1,9 +1,6 @@
 /* Objects */
 
 
-@sm-sidebar: 40%;
-@md-sidebar: 35%;
-
 .page-header {
     padding: 10vh 0.45rem 0;
     .sm-plus({
@@ -20,14 +17,12 @@
 .page-header {
     .sm-plus({
         max-width: 35rem;
-        margin: 0 0 0 auto;
+        margin: 0 auto;
         margin-left: 30%;
     });
     .md-plus({
-        padding-left: 25%;
-        padding-right:25%;
-        max-width: 90rem;
-        margin: 0 auto;
+        max-width: 36rem;
+        margin-left: 26%;
     });
 }
 .page-caption {
@@ -153,60 +148,38 @@
     }
     ul { padding-left: 0; }
 }
+
+.footer {
+    margin-top: 5rem;
+    padding-top:1.5rem;
+    border-top: 1px solid lighten(@brand-two, 70%);
+    .sm-plus({
+        margin-bottom: 2rem;
+    });
+}
 .footer-logo {
+    float: right;
     display: block;
-    margin: 1rem 0 0;
+    width: 5rem;
+    margin: 0;
     .ir {
         display: block;
         margin: 0;
         width: 100%;
         height: 1px;
-        padding-top: percentage(179/537);
-        background: url(../img/hamon-logo.svg) no-repeat scroll center center;
-        background-size: 80% auto;
-        transform: translateX(-5%);
+        padding-top: 100%;
+        background: url(../img/hamon-monogram.svg) no-repeat scroll left top;
+        background-size: contain;
     }
     .sm-plus({
-        float: left;
-        width: @sm-sidebar;
-        .ir {
-            background-position: left center;
-            transform: none;
-        }
-    });
-    .md-plus({
-        width: @md-sidebar;
+        width: 4rem;
     });
 }
 .footer-nav {
-    width: 70%;
-    margin: 3rem auto;
-    li {
-        float: left;
-        width: 50%;
-        margin: 0;
-        padding: 0.75rem 0;
-        &:nth-child(even) { padding-left: 1.5rem; }
-    }
-    a { padding: 0.5rem 0; margin: -0.5rem 0; }
+    margin: -0.25rem 0 1.5rem;
+    text-transform: uppercase;
+    a:after { display: none; }
     a:hover { text-decoration: underline; }
-    .sm-plus({
-        width: auto;
-        margin: 1rem 0 2rem @sm-sidebar;
-        padding-left: 2.5rem;
-    });
-    
+    .sm-plus({ display: none; });
 }
-.footer-fineprint {
-    .sm-plus({
-        margin-left: @sm-sidebar;
-        padding-left: 2.5rem;
-    });
-}
-.footer-nav,
-.footer-fineprint {
-    .md-plus({
-        margin-left: @sm-sidebar;
-        padding-left: 0;
-    });
-}
+.footer-fineprint {}
