--- a/templates/_layouts/page.liquid
+++ b/templates/_layouts/page.liquid
@@ -14,5 +14,7 @@ layout: base
     </div>
   </header>
   
-  {{ content }}
+  <section class="wrapper">
+    {{ content }}
+  </section>
 </article>
