--- a/templates/work.liquid
+++ b/templates/work.liquid
@@ -54,9 +54,9 @@ clients:
 
 <ul>
   {% for client in page.clients %}
-    <li class="wrapper">
+    <li class="teaser-spacer">
       <article>
-        <h1 class="title-four  size-regular">
+        <h1 class="title-four size-regular">
           {% if client.link %}
             <a class="silent" href="{{ client.link }}">
               {{ client.title }}
