Improve link underlines using CSS gradients

--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -41,6 +41,7 @@
         display: block;
         padding: 0.25rem 0;
         text-decoration: none;
+        background: none !important;
     }
     a:hover { text-decoration: underline; }
     a.active{
@@ -61,10 +62,6 @@
         display: inline;
         margin-right: 0.5em;
         &:before { display: none; }
-    }
-    a {
-        padding: 0.15rem  0.3rem;
-        margin: -0.15rem -0.3rem;
     }
 }
 .prose .links-list { margin-top: -1.25rem; }
