--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -182,12 +182,7 @@ p {
     font-weight: normal;
 }
 .prose {
-    // h1,
-    // h2,
-    // h3,
-    // h4 {
-    //     &:first-child { margin-top: 0; }
-    // }
+    a:extend(.link-underline all) {}
     
     h3 {
         &:extend(.size-regular);
