--- a/templates/_layouts/base.liquid
+++ b/templates/_layouts/base.liquid
@@ -46,7 +46,7 @@ social:
 
 
 <footer class="footer clearboth wrapper">
-  <a class="footer-logo silent-hover" href="{{ site.baseurl | append: '/' }}">
+  <a class="footer-logo" href="{{ site.baseurl | append: '/' }}">
     <h1 class="ir">
       Hamon
     </h1>
