--- a/templates/contact.liquid
+++ b/templates/contact.liquid
@@ -40,7 +40,7 @@ contact:
       <dt class="title-three size-small brand-three">
         {{ option[0] | smartify }}
       </dt>
-      <dd class="prose title-types">
+      <dd class="prose">
         {{ option[1] | markdownify }}
       </dd>
     {% endfor %}
