--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -48,7 +48,7 @@ email: contact@hamon.in
                     </b>
                   {% endif %}
                   {% if project.link %}
-                    <a class="truncate title-type size-small" href="{{ project.link }}">
+                    <a class="title-type size-small" href="{{ project.link }}">
                       {% include prettyurl.liquid url=project.link %}
                     </a>
                   {% endif %}
