--- a/templates/lycaeum.liquid
+++ b/templates/lycaeum.liquid
@@ -30,15 +30,14 @@ topic: /topics/technology
 
 ---
 
+{% if page.logo %}
+  <figure class="contain-width centered">
+    <a href="{{ page.logo.link }}">
+      <img alt="{{ page.logo.alt }}" src="{{ site.baseurl | append: page.logo.src }}">
+    </a>
+  </figure>
+{% endif %}
 
 <div class="prose">
-  {% if page.logo %}
-    <figure class="contain-width centered">
-      <a class="silent-hover" href="{{ page.logo.link }}">
-        <img alt="{{ page.logo.alt }}" src="{{ site.baseurl | append: page.logo.src }}">
-      </a>
-    </figure>
-  {% endif %}
-  
   {{ page.body | markdownify }}
 </div>
