--- a/templates/work.liquid
+++ b/templates/work.liquid
@@ -82,7 +82,7 @@ clients:
                     </b>
                   {% endif %}
                   {% if project.link %}
-                    <a class="truncate title-type size-small" href="{{ project.link }}">
+                    <a class="title-type size-small" href="{{ project.link }}">
                       {% include prettyurl.liquid url=project.link %}
                     </a>
                   {% endif %}
