--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -153,6 +153,10 @@ p {
 .title-two {
     margin-bottom: 0.5rem;
     font-weight: normal;
+    a {
+        .background-underline(@brand-three, 40%);
+        .has-cssgradients & { background-position: 0 1.3em; }
+    }
 }
 .title-three {
     text-transform: uppercase;
