Treat FOSS section differently from Client Projects

--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -65,6 +65,15 @@
     }
 }
 .prose .links-list { margin-top: -1.25rem; }
+.project-list > li { margin: 0.5rem 0; }
+.logos-list {
+    margin: 0.5rem 0;
+    li {
+        display: inline-block;
+        max-width: 13rem;
+        margin-right: 1.5rem;
+    }
+}
 
 .testimonial {
     margin-top: 3rem;
