--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -51,7 +51,12 @@ a.silent {
     text-decoration: none;
     .has-cssgradients & { background: none; }
 }
-
+hr {
+    border: none;
+    border-top: 1px solid lighten(@brand-two, 70%);
+    width: 1.5rem;
+    margin-left: 0;
+}
 
 
 
