--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -213,6 +213,9 @@ p {
     ul ol:last-child,
     ul ul:last-child     { margin-bottom: 0; }
     
+    code { font-size: 0.8334em; }
+    abbr { font-size: 0.9em; }
+    
     figure.highlight { margin: 0; }
     pre {
         background: @brand-five-light;
@@ -222,7 +225,6 @@ p {
         code {
             background: none;
             padding: 0;
-            font-size: 0.8334em;
         }
     }
     
