Improve article listing titles

--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -153,9 +153,10 @@ p {
 .title-two {
     margin-bottom: 0.5rem;
     font-weight: normal;
+    line-height: 1.3;
     a {
         .background-underline(@brand-three, 40%);
-        .has-cssgradients & { background-position: 0 1.3em; }
+        .has-cssgradients & { background-position: 0 1.25em; }
     }
 }
 .title-three {
