--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -67,7 +67,7 @@
 .prose .links-list { margin-top: -1.25rem; }
 .project-list > li { margin: 0.5rem 0; }
 .logos-list {
-    margin: 0.5rem 0;
+    margin: 0.75rem 0;
     li {
         display: inline-block;
         max-width: 13rem;
@@ -179,7 +179,7 @@
         width: 100%;
         height: 1px;
         padding-top: 100%;
-        background: url(../img/hamon-monogram.svg) no-repeat scroll left top;
+        background: white url(../img/hamon-monogram.svg) no-repeat scroll left top;
         background-size: contain;
     }
     .sm-plus({
@@ -187,7 +187,7 @@
     });
 }
 .footer-nav {
-    margin: -0.25rem 0 1.5rem;
+    margin: -0.25rem 6rem 1.5rem 0;
     .sm-plus({ display: none; });
 }
 .footer-fineprint {}
