--- a/templates/_layouts/article.liquid
+++ b/templates/_layouts/article.liquid
@@ -55,6 +55,9 @@ layout: base
 </article>
 
 
+<div class="wrapper"><hr class="teaser-spacer"></div>
+
+
 {% for topic_id in page.topics %}
   {%
     include articles_listing_by_topic.liquid
