--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -3,3 +3,5 @@
 @import 'typography.less';
 @import 'theme.less';
 @import 'objects.less';
+@import (inline) 'gtsectra.css';
+@import (inline) 'gtpressuramono.css';
